fix horizontal scroll of game page

--- a/src/app/modules/game/game.page.scss
+++ b/src/app/modules/game/game.page.scss
@@ -29,6 +29,10 @@ table {
   }
 }
 
+ion-input {
+  min-width: 30px;
+}
+
 // Create the explosion...
 $box-shadow: ();
 $box-shadow2: ();
